2013-05-26  Per Bothner  <per@bothner.com>

	* Shell.java (run): If evalModule fails, throw SyntaxException,
	which when handled produces better error messages.

2013-03-25  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Define 'define-simple-constructor'.

	* standard/Scheme.java (emptyString): Replace by 2 new fields:
	(emptyStringLeft, emptyStringRight): New fields, initialized to
	unique objects.
	(initScheme): Update '$<<$' and '$>>$' to bind to new fields.

2013-03-20  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Declare '$sprintf$'.

2013-03-18  Per Bothner  <per@bothner.com>

	* lang/SyntaxRules.java (<init>): Some improvements to error reporting.

2013-03-04  Charles Turner <chturne@gmail.com>

	* lang/Lambda.java: New hooks for CommonLisp's OrdinaryLambda.
	(addParam): Make protected.
	(auxillaryRewrite): New method.
	(rewriteBody): Use it.

2013-02-24  Per Bothner  <per@bothner.com>

	* standard/SchemeCompilation.java (checkDefaultBinding): Add
	handling of '->TYPE' as a conversion function.

2013-02-23  Per Bothner  <per@bothner.com>

	* lang/Translator.java (setLineOf): Only set location if not yet set.

	* standard/Scheme.java (initScheme): Update to use use "$<<$" and
	"$>>$" bindings for quasi-value escaped-expression delimiters.

	* lang/SyntaxForms.java (makeForm): Handle null scope.

2013-02-05 Matthieu Vachon  <matthieu.o.vachon@gmail.com>

	* lang/Translator.java: Replaced usage of Compilation.generateMain
	with method Compilation.generateMainMethod.
	* repl.java: Delegating handling of --main argument to
	Compilation.options.

2013-02-21  Per Bothner  <per@bothner.com>

	* lang/Translator.java (lookupStandardEntity): Use new generated
	StandardNamedChars class.

2013-02-14  Per Bothner  <per@bothner.com>

	* lang/SyntaxForms.java (makeForm): Preserve position info.
	(in member class PairWithPositionSyntaxForm)
	(getCar, getCdr, <init>): Fix bug.

2013-02-13  Per Bothner  <per@bothner.com>
