@@ -1,3 +1,9 @@
+2013-06-08  Matthieu Vachon  <matthieu.o.vachon@gmail.com>
+	    Per Bothner  <per@bothner.com>
+
+	* use-slots.scm: Add test for Savannah bug #39048
+	"Bad method call resolution?".
+
 2013-06-02  Matthieu Vachon  <matthieu.o.vachon@gmail.com>
 	    Per Bothner  <per@bothner.com>
 
